[SPC-level-list] solved by title, alignment

--- a/src/components/level-list/level-list.scss
+++ b/src/components/level-list/level-list.scss
@@ -31,6 +31,10 @@
         text-align: center;
     }
 
+    &:nth-child(3) {
+        text-align: center;
+    }
+
     &:nth-child(4) {
         flex: 2;
     }
